force-app/main/default/objects/Lead/fields/Alpha_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha_2_Code__c</fullName>
    <label>Alpha 2 Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Alpha_2_Code</valueSetName>
    </valueSet>
</CustomField>