force-app/main/default/objects/Lead/fields/Alpha_3_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha_3_Code__c</fullName>
    <label>Alpha 3 Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Alpha_3_Code</valueSetName>
    </valueSet>
</CustomField>