force-app/main/default/objects/Lead/fields/Regional_Bloc__c.field-meta.xml
<CustomField>
    <fullName>Regional_Bloc__c</fullName>
    <label>Regional Bloc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Bloc</valueSetName>
    </valueSet>
</CustomField>